--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -43,9 +43,10 @@
 <p>1.將老師倉儲的<span>pelican.leo裡的@edit base.html所有內容覆蓋自己的</span></p>
 <p><span>2.Pelican設定</span></p>
 <p><span>      共用 @edit pelocanconf.py  將名稱改為自己的</span></p>
-<p><span>     遠端 @edit pelocanconf.py SITEUR="網站"</span></p>
+<p><span>       遠端 @edit pelocanconf.py SITEUR="網站"</span></p>
 <p>blog的網址是依照 @path markdown (@edit 20191031-1.md)來決定</p>
-<p>local.blog &gt; go script</p><h2>Solvespace 操作</h2>
+<p>local.blog &gt; go script</p>
+<h2>Solvespace 操作</h2>
 <h3>1 - 1</h3>
 <h2>V-REP 操作</h2>
 <p><span>學習如何完成 </span><a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a><span> 原始碼的編譯, 並透過 </span><a href="http://solvespace.com/">http://solvespace.com</a><span> 學習如何建立<span> </span></span>web_rep2.zip<span> 中所需的行走車</span></p>
@@ -55,6 +56,23 @@
 <p>       \lib\Windows\64Bit裡的remoteApi.dll</p>
 <p>覆蓋 web_vrep2\web_vrep2裡的<span>remoteApi.dll</span></p>
 <h3>1 - 1 Two - Wheeler</h3>
+<h1>期末</h1>
+<p>Task1: 繪圖軟體 零組件繪圖與應用 </p>
+<p>Task2: 工程分析 </p>
+<p>Task3:<span>轉入<a href="http://www.coppeliarobotics.com/"><span> </span>V-rep</a><span> </span>與<span> </span><a href="https://cyberbotics.com/">Webots</a><span> </span>執行機電控制系統設計 </span></p>
+<p>Project: <span>分組專案執行 (30%)</span></p><h2>組員工作分配</h2>
+<p><span>1 . 以分組協同方式整理教科書內容</span></p>
+<p><span>2 . </span><span>處理 content.htm, reveal 簡報以及 pelican 網誌 markdown 中的改版衝突</span></p>
+<p><span>3 . NX及SolveSpace 繪圖 </span></p>
+<p><span>4 . V-rep 與 Webots Tutorial, 分別利用 Solvespace 與 NX 建立零組件轉入</span></p>
+<p></p><h2>繪圖</h2>
+<p>以下是課程中所列重點</p>
+<p><span>1 . 兩人分別用 Solvespace   和  NX 建立零組件，錄製繪圖過程並建構出零組件後與V-REP、Webots組做</span><span>結合。</span></p>
+<p><span>2 .  NX繪圖者匯出零件後分析零件應力分析，再和Webots的應力分析做比較，得出差異性。</span></p>
+<p><span>----------------------------------------------------------</span></p>
+<p><span>課程筆記</span></p>
+<p><span>將練習影片加上說明字幕, 以校名+系名+課程名稱+分組任務名稱+學號作為標題, 上傳 Youtube 後, 分別嵌入個人與分組網頁中.</span></p><h2>V-REP and Webots</h2>
+<h2>教科書</h2>
 <h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
 <h4></h4>
