--- a/content/期末.html
+++ b/content/期末.html
@@ -154,16 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>     以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>     建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p><span>     </span>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容<span>       </span>推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p><span>     </span>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br />Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯</div>
+    <div id="tipue_search_content">1 - 1 Two - Wheeler << <a href='1 - 1 Two - Wheeler.html'>Previous</a> <a href='組員工作分配.html'>Next</a> >> 組員工作分配<br /><h1>期末</h1>
+<p>Task1: 繪圖軟體 零組件繪圖與應用 </p>
+<p>Task2: 工程分析 </p>
+<p>Task3:<span>轉入<a href="http://www.coppeliarobotics.com/"><span> </span>V-rep</a><span> </span>與<span> </span><a href="https://cyberbotics.com/">Webots</a><span> </span>執行機電控制系統設計 </span></p>
+<p>Project: <span>分組專案執行 (30%)</span></p>
+<br />1 - 1 Two - Wheeler << <a href='1 - 1 Two - Wheeler.html'>Previous</a> <a href='組員工作分配.html'>Next</a> >> 組員工作分配</div>
         
     <!-- footer -->
       <div class="container">
