--- a/content/組員工作分配.html
+++ b/content/組員工作分配.html
@@ -154,16 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>     以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>     建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p><span>     </span>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容<span>       </span>推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p><span>     </span>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br />Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯</div>
+    <div id="tipue_search_content">期末 << <a href='期末.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖<br /><h1>組員工作分配</h1>
+<p><span>1 . 以分組協同方式整理教科書內容</span></p>
+<p><span>2 . </span><span>處理 content.htm, reveal 簡報以及 pelican 網誌 markdown 中的改版衝突</span></p>
+<p><span>3 . NX及SolveSpace 繪圖 </span></p>
+<p><span>4 . V-rep 與 Webots Tutorial, 分別利用 Solvespace 與 NX 建立零組件轉入</span></p>
+<p></p>
+<br />期末 << <a href='期末.html'>Previous</a> <a href='繪圖.html'>Next</a> >> 繪圖</div>
         
     <!-- footer -->
       <div class="container">
