--- a/content/繪圖.html
+++ b/content/繪圖.html
@@ -154,16 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>     以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>     建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p><span>     </span>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容<span>       </span>推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p><span>     </span>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<br />Task << <a href='Task.html'>Previous</a> <a href='Solvespace 編譯.html'>Next</a> >> Solvespace 編譯</div>
+    <div id="tipue_search_content">組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='V-REP and Webots.html'>Next</a> >> V-REP and Webots<br /><h1>繪圖</h1>
+<p>以下是課程中所列重點</p>
+<p><span>1 . 兩人分別用 Solvespace   和  NX 建立零組件，錄製繪圖過程並建構出零組件後與V-REP、Webots組做</span><span>結合。</span></p>
+<p><span>2 .  NX繪圖者匯出零件後分析零件應力分析，再和Webots的應力分析做比較，得出差異性。</span></p>
+<p><span>----------------------------------------------------------</span></p>
+<p><span>課程筆記</span></p>
+<p><span>將練習影片加上說明字幕, 以校名+系名+課程名稱+分組任務名稱+學號作為標題, 上傳 Youtube 後, 分別嵌入個人與分組網頁中.</span></p>
+<br />組員工作分配 << <a href='組員工作分配.html'>Previous</a> <a href='V-REP and Webots.html'>Next</a> >> V-REP and Webots</div>
         
     <!-- footer -->
       <div class="container">
