--- a/config/content.htm
+++ b/config/content.htm
@@ -61,13 +61,15 @@
 <p><span>2 . </span><span>處理 content.htm, reveal 簡報以及 pelican 網誌 markdown 中的改版衝突</span></p>
 <p><span>3 . NX及SolveSpace 繪圖 </span></p>
 <p><span>4 . V-rep 與 Webots Tutorial, 分別利用 Solvespace 與 NX 建立零組件轉入</span></p>
-<p></p><h1>繪圖</h1>
+<p></p>
+<h1>繪圖</h1>
 <p>以下是課程中所列重點</p>
 <p><span>1 . 兩人分別用 Solvespace   和  NX 建立零組件，錄製繪圖過程並建構出零組件後與V-REP、Webots組做</span><span>結合。</span></p>
 <p><span>2 .  NX繪圖者匯出零件後分析零件應力分析，再和Webots的應力分析做比較，得出差異性。</span></p>
 <p><span>----------------------------------------------------------</span></p>
 <p><span>課程筆記</span></p>
-<p><span>將練習影片加上說明字幕, 以校名+系名+課程名稱+分組任務名稱+學號作為標題, 上傳 Youtube 後, 分別嵌入個人與分組網頁中.</span></p><h3>NX繪圖</h3>
+<p><span>將練習影片加上說明字幕, 以校名+系名+課程名稱+分組任務名稱+學號作為標題, 上傳 Youtube 後, 分別嵌入個人與分組網頁中.</span></p>
+<h3>NX繪圖</h3>
 <p><img alt="" height="288" src="/images/1.png" width="300"/></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/vaDimdMl4Wk" width="400"></iframe></p>
 <p>---------------------------------------------------------------------------------------</p>
@@ -97,8 +99,11 @@
 <p><span>---------------------------------------------------------------------------------------</span></p>
 <p><span><img alt="" height="245" src="/images/10.png" width="300"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/OExteDbA218" width="400"></iframe></span></p>
-<p><span></span></p>
-<h1>教科書</h1><h3>NX應力分析</h3>
+<p><br/><br/><br/></p>
+<h2>SloveSpace繪圖</h2>
+<p>繪製及組合自走車練習</p>
+<p></p><h1>教科書</h1>
+<h3>NX應力分析</h3>
 <h2>第八章</h2>
 <p>第八章 有限元素分析</p>
 <p>有限元素分析（<span>FEA</span>）是有限元素方法（<span>FEM</span>）的實際運用，他用於對結構或流體所施加的因素<span>(</span>例如力、壓力、熱量和振動<span>)</span>來做出反應行為。</p>
@@ -106,5 +111,6 @@
 <p>在最後，許多軟體像是NX12都能解決有限元素分析（<span>FEA</span>）的問題並將結果輸出且可視化。有限元素分析（<span>FEA</span>）能夠幫助工程師在製造和測試前，更加了解產品的性能。</p>
 <p>有限元素分析（<span>FEA</span>）的應用包括結構分析、熱分析、流體力學和電磁兼容性</p>
 <p>其中，有限元素分析（<span>FEA</span>）最常用於結構和固體力學，並應用於計算機械性能（例如應力和位移）。這些（應力和位移）的計算對機械部件的性能非常重要，甚至能夠預防故障。</p>
-<p>本章中，我們將處理實體零件的結構應力和應變分析。</p><h1>About</h1>
+<p>本章中，我們將處理實體零件的結構應力和應變分析。</p>
+<h1>About</h1>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
