--- a/content/SloveSpace繪圖.html
+++ b/content/SloveSpace繪圖.html
@@ -154,8 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">教科書 << <a href='教科書.html'>Previous</a> <a href='第八章.html'>Next</a> >> 第八章<br /><h1>NX應力分析</h1>
-<br />教科書 << <a href='教科書.html'>Previous</a> <a href='第八章.html'>Next</a> >> 第八章</div>
+    <div id="tipue_search_content">NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書<br /><h1>SloveSpace繪圖</h1>
+<p>繪製及組合自走車練習</p>
+<p></p><br />NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='教科書.html'>Next</a> >> 教科書</div>
         
     <!-- footer -->
       <div class="container">
