--- a/content/教科書.html
+++ b/content/教科書.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li><a href='第八章.html'>第八章</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li><a href='Member.html'>Member</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li class='has-children'><a href='Solvespace 編譯.html'>Solvespace 編譯</a><ul class='dropdown'><li><a href='About 更改.html'>About 更改</a></li></ul><li><a href='Blog.html'>Blog</a><li class='has-children'><a href='Solvespace 操作.html'>Solvespace 操作</a><ul class='dropdown'><li><a href='1 - 1.html'>1 - 1</a></li></ul><li class='has-children'><a href='V-REP 操作.html'>V-REP 操作</a><ul class='dropdown'><li><a href='1 - 1 Two - Wheeler.html'>1 - 1 Two - Wheeler</a></li></li></ul></ul><li><a href='組員工作分配.html'>組員工作分配</a><li class='has-children'><a href='繪圖.html'>繪圖</a><ul class='dropdown'><li><a href='NX繪圖.html'>NX繪圖</a><li><a href='SloveSpace繪圖.html'>SloveSpace繪圖</a></li></ul><li class='has-children'><a href='教科書.html'>教科書</a><ul class='dropdown'><li><a href='NX應力分析.html'>NX應力分析</a><li><a href='第八章.html'>第八章</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='NX應力分析.html'>Next</a> >> NX應力分析<br /><h1>教科書</h1><br />NX繪圖 << <a href='NX繪圖.html'>Previous</a> <a href='NX應力分析.html'>Next</a> >> NX應力分析</div>
+    <div id="tipue_search_content">SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='NX應力分析.html'>Next</a> >> NX應力分析<br /><h1>教科書</h1>
+<br />SloveSpace繪圖 << <a href='SloveSpace繪圖.html'>Previous</a> <a href='NX應力分析.html'>Next</a> >> NX應力分析</div>
         
     <!-- footer -->
       <div class="container">
